<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
            
        <item
            android:id="@+id/customersMenuItem"
            android:icon="@drawable/ic_people"
            android:title="@string/customers" />
            
        <item
            android:id="@+id/statsFragment"
            android:icon="@drawable/ic_stats"
            android:title="@string/statistics" />
            
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
            
        <item
            android:id="@+id/reportMenuItem"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports" />
            
        <item
            android:id="@+id/adminMenuItem"
            android:icon="@drawable/ic_settings"
            android:title="@string/administration" />
            
        <item
            android:id="@+id/helpMenuItem"
            android:icon="@drawable/ic_help"
            android:title="@string/help_and_support" />
    </group>
</menu> 